[package]
name = "wasabio"
version = "1.0.0"
authors = ["Sepehr Laal"]
edition = "2018"
description = "WebAssembly and SharedArrayBuffer IO. Pronounced 'wassabee-yo'."
license = "MIT"
repository = "https://github.com/3p3r/wasabio.git"

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
glob = "0.3.1"

[dependencies]
build_timestamp = "0.1.0"
console_error_panic_hook = "0.1.7"
crossbeam-queue = "0.3.8"
defr = "0.1.0"
either = "1.8.1"
id-pool = "0.2.2"
js-sys = "0.3.61"
nameof = "1.2.2"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.64", features = ["console"] }
